--- a/css/geotime.css
+++ b/css/geotime.css
@@ -1,3 +1,10 @@
 body {
     text-align: center;
+    font-family: Verdana, sans-serif;
+    line-height: 30px;
+}
+
+a {
+    text-decoration: none;
+
 }
