Add zoom/pan on background map

--- a/css/map.css
+++ b/css/map.css
@@ -13,6 +13,10 @@
     stroke-linejoin: round;
 }
 
+#bg{
+    fill: white;
+}
+
 #map, #externalSvg, #resizeHandle {
     position: absolute;
     left: 200px;
