Change territory fill color when clicked (helper step 2)

--- a/css/map.css
+++ b/css/map.css
@@ -26,6 +26,10 @@
     fill: red !important;
 }
 
+.selected {
+    fill: black !important;
+}
+
 #resizeHandle rect {
     cursor: se-resize;
     fill:gray;
