--- a/css/main.css
+++ b/css/main.css
@@ -60,19 +60,25 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+ul{
+    list-style: none outside none;
+    padding-left: 0;
+}
+.gallery li {
+    display: block;
+    float: left;
+    height: 400px;
+    margin-bottom: 6px;
+    margin-right: 6px;
+    width: 400px;
+}
+.gallery li a {
+    height: 400px;
+    width: 400px;
+}
+.gallery li a img {
+    max-width: 400px;
+}
 
 /* ==========================================================================
    Media Queries
