--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,10 @@ ul{
     max-width: 400px;
 }
 
+.template {
+    display: none !important;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
