--- a/css/helper.css
+++ b/css/helper.css
@@ -1,12 +1,11 @@
 #mapHelper {
-    position: absolute;
+    position: fixed;
+    right: 0;
+    padding: 5px;
     background: white;
     border: 1px solid black;
-    cursor: move;
     font-size: 12px;
-    padding: 5px;
     text-align: left;
-    left: 500px;
 }
 
 #mapHelper a.active {
