Add possibility to un-select a selected territory. Display the territory ID

--- a/css/helper.css
+++ b/css/helper.css
@@ -45,3 +45,11 @@
 .helperStep.active .if-active {
     display: block;
 }
+
+.helperStep #territoryId {
+    color: gray;
+}
+
+.helperStep #territoryId.clicked {
+    color: black;
+}
