Add markers when the user selects calibration points Add possibility to remove a calibration point Add possibility to choose between panning or rotating the map Init map calibration Upgrade d3 to 3.5.*

--- a/css/geotime.css
+++ b/css/geotime.css
@@ -11,9 +11,10 @@ a {
     display: none;
 }
 
-#projectionSelectionContainer {
+#mapConfigContainer {
     margin: 10px;
     position: absolute;
+    z-index: 2;
 }
 
 #loadTerritoryMap {
