--- a/css/helper.css
+++ b/css/helper.css
@@ -1,3 +1,16 @@
+#crosshair-marker circle {
+    fill: none;
+    stroke-width:1;
+}
+
+#markers .bgMap {
+    stroke: #ff0000;
+}
+
+#markers .fgMap {
+    stroke: #0000ff;
+}
+
 #mapHelper {
     position: fixed;
     right: 0;
@@ -45,6 +58,10 @@
 
 .helperStep.active .if-active {
     display: block;
+}
+
+.helperStep .removeCalibrationPoint {
+    cursor: pointer;
 }
 
 .helperStep #territoryId {
