--- a/css/helper.css
+++ b/css/helper.css
@@ -64,7 +64,7 @@
 .helperStep .section {
     position: relative;
     border: 1px dashed gray;
-    padding: 5px;
+    padding: 5px 5px 25px;
 }
 
 .helperStep .section .title {
