Select the map in a list rather than randomly

--- a/css/geotime.css
+++ b/css/geotime.css
@@ -21,7 +21,8 @@ a {
     opacity: 0.5;
 }
 
-#loadRandomTerritoryMap {
+#loadRandomTerritoryMap,
+#selectMap {
     position: fixed;
     top: 0;
     right: 0;
