--- a/css/helper.css
+++ b/css/helper.css
@@ -15,6 +15,7 @@
     position: fixed;
     right: 0;
     top: 50px;
+    width: 500px;
     padding: 5px;
     background: white;
     border: 1px solid black;
