Remove resize handling on external SVG Move projection info to the map location process

--- a/css/map.css
+++ b/css/map.css
@@ -16,7 +16,7 @@
     fill: none;
 }
 
-#map, #externalSvg, #resizeHandle, #markers {
+#map, #externalSvg, #markers {
     position: absolute;
     left: 200px;
 }
@@ -27,9 +27,4 @@
 
 .selected {
     fill: black !important;
-}
-
-#resizeHandle rect {
-    cursor: se-resize;
-    fill:gray;
 }
