--- a/templates/mapLocation/adjust.html
+++ b/templates/mapLocation/adjust.html
@@ -1,1 +1,8 @@
 Adjust the map if necessary.
+
+<div id="mapConfigContainer">
+    <label for="projectionSelection">Projection : <br /></label>
+    <select id="projectionSelection" class="form-control"></select><br />
+    <label for="projectionCenter">Center :</label><span id="projectionCenter"></span><br />
+    <label for="projectionRotation">Rotation :</label><span id="projectionRotation"></span>
+</div>
