Disable drag behavior on foreground map Fix calibration points positionning

--- a/css/geotime.css
+++ b/css/geotime.css
@@ -19,6 +19,12 @@ a {
     opacity: 0.5;
 }
 
+#dragActionContainer {
+    z-index: 10;
+    position: absolute;
+    background: white;
+}
+
 #loadRandomTerritoryMap,
 #selectMap {
     position: fixed;
