Hide the background mack when selecting territories if it is not calibrated List territories even if the map is not calibrated Clear hovered and selected territories when exiting the territory identification process Add a "Cancel" button in the territory identification form

--- a/templates/addLocatedTerritory.html
+++ b/templates/addLocatedTerritory.html
@@ -34,6 +34,12 @@
             </div>
         </div>
 
-        <input type="button" id="addTerritory" class="col-md-12 btn btn-default" value="Add territory"/>
+        <div class="clearfix">
+            <input type="button" id="addTerritory" class="col-md-12 btn btn-success" value="Add territory"/>
+        </div>
+
+        <div class="clearfix">
+            <input type="button" id="cancelTerritory" class="col-md-12 btn btn-default" value="Cancel"/>
+        </div>
     </div>
 </div>
