Animated fill color when hovering or selecting a territory

--- a/css/map.css
+++ b/css/map.css
@@ -24,10 +24,40 @@
     z-index: 20;
 }
 
+@keyframes hovered {
+    0% {
+        fill: rgb(0,198,0);
+    }
+    50% {
+        fill: rgb(0,127,0);
+    }
+    100% {
+        fill: rgb(0,198,0);
+    }
+}
+
 .hovered {
-    fill: red !important;
+    fill: rgb(0,198,0) !important;
+    animation-name: hovered;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes selected {
+    0% {
+        fill: rgb(64,64,64);
+    }
+    50% {
+        fill: rgb(128,128,128);
+    }
+    100% {
+        fill: rgb(64,64,64);
+    }
 }
 
 .selected {
-    fill: black !important;
+    fill: rgb(64,64,64) !important;
+    animation-name: selected;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
