--- a/css/helper.css
+++ b/css/helper.css
@@ -131,3 +131,48 @@
 .helperStep #locatedTerritories .removeLocatedTerritory {
     margin-right: 0;
 }
+
+/* Territory selection */
+@keyframes hovered {
+    0% {
+        fill: rgb(0,198,0);
+    }
+    50% {
+        fill: rgb(0,127,0);
+    }
+    100% {
+        fill: rgb(0,198,0);
+    }
+}
+
+.hovered {
+    fill: rgb(0,198,0) !important;
+    animation-name: hovered;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes selected {
+    0% {
+        fill: rgb(64,64,64);
+    }
+    50% {
+        fill: rgb(128,128,128);
+    }
+    100% {
+        fill: rgb(64,64,64);
+    }
+}
+
+.selected {
+    fill: rgb(64,64,64) !important;
+    animation-name: selected;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+.already-selected {
+    fill: rgb(64,64,64) !important;
+    mask: url(#mask-stripe) !important;
+    animation: none !important;
+}
