--- a/css/helper.css
+++ b/css/helper.css
@@ -171,7 +171,7 @@
     animation-iteration-count: infinite;
 }
 
-.already-selected {
+.already-identified {
     fill: rgb(64,64,64) !important;
     mask: url(#mask-stripe) !important;
     animation: none !important;
