--- a/css/helper.css
+++ b/css/helper.css
@@ -145,11 +145,16 @@
     }
 }
 
-.hovered {
-    fill: rgb(0,198,0) !important;
-    animation-name: hovered;
+.hovered,
+.selected {
+    mask: url(#mask-stripe) !important;
     animation-duration: 3s;
     animation-iteration-count: infinite;
+    fill-opacity: inherit !important;
+}
+
+.hovered {
+    animation-name: hovered;
 }
 
 @keyframes selected {
@@ -165,14 +170,23 @@
 }
 
 .selected {
-    fill: rgb(64,64,64) !important;
     animation-name: selected;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
+}
+
+@keyframes hovered-already-selected {
+    0% {
+        fill: rgb(64,64,64)
+    }
+    50% {
+        fill: rgb(127,127,127);
+    }
+    100% {
+        fill: rgb(64,64,64)
+    }
 }
 
 .already-identified {
     fill: rgb(64,64,64) !important;
     mask: url(#mask-stripe) !important;
-    animation: none !important;
+    animation-name: hovered-already-selected;
 }
