Put a label for non-located territories in the territories list of a map Highlight a territory label when its path is hovered on the map Refactor territory hover management Fix requirejs inclusion order

--- a/templates/locatedTerritory.html
+++ b/templates/locatedTerritory.html
@@ -1,4 +1,5 @@
 <span class="territoryName"></span>
+<span class="notLocated label label-danger">Not located</span>
 <span class="removeLocatedTerritory btn btn-xs btn-danger">
     &nbsp;Remove
 </span>
