--- a/templates/locatedTerritory.html
+++ b/templates/locatedTerritory.html
@@ -1,5 +1,4 @@
 <span class="territoryName"></span>
 <span class="notLocated label label-danger">Not located</span>
-<span class="removeLocatedTerritory btn btn-xs btn-danger">
-    &nbsp;Remove
-</span>
+<span class="removeLocatedTerritory btn btn-xs btn-danger glyphicon glyphicon-remove"></span>
+<span class="editLocatedTerritory btn btn-xs btn-warning glyphicon glyphicon-pencil"></span>
