--- a/css/helper.css
+++ b/css/helper.css
@@ -38,9 +38,9 @@
     top: 0;
     bottom: 0;
     width: 500px;
+    margin: 0;
     padding: 5px;
     background: white;
-    border: 1px solid black;
     font-size: 12px;
     text-align: left;
     overflow: auto;
