Removed striped mask Prevent clicking on SVG sub-elements that are not paths

--- a/css/map.css
+++ b/css/map.css
@@ -20,6 +20,14 @@
     position: absolute;
 }
 
+#externalSvg * {
+    pointer-events: none;
+}
+
+#externalSvg path[d$="z"] {
+    pointer-events: all;
+}
+
 #externalSvg.onTop {
     z-index: 20;
 }
