Add option to view modern territories

--- a/css/view.css
+++ b/css/view.css
@@ -4,9 +4,10 @@
 
 #view-form {
     right: 0;
-    width: 200px;
+    width: 220px;
     position: fixed;
     border: 1px solid black;
+    margin: 10px;
     padding: 10px;
 }
 
