--- a/templates/map.html
+++ b/templates/map.html
@@ -2,6 +2,24 @@
     <svg id="map" ng-width="{{ bgMapWidth }}" ng-height="{{ bgMapWidth }}">
         <rect id="bg" ng-width="{{bgMapWidth}}" ng-height="{{bgMapWidth}}"></rect>
     </svg>
-    <svg id="markers" ng-width="{{ bgMapWidth }}" ng-height="{{ bgMapWidth }}">
+    <svg id="markers" ng-width="{{ bgMapWidth }}" ng-height="{{ bgMapWidth }}" ng-controller="CalibrationMarkerController">
+        <g class="marker-group bgPoint"></g>
+        <g class="marker-group fgPoint"></g>
+        <defs>
+            <g id="crosshair-marker">
+                <circle
+                    ng-repeat="circle in circles"
+                    style="stroke:{{ circle.color }}"
+                    ng-cx="{{ markerSide }}"
+                    ng-cy="{{ markerSide }}"
+                    ng-r="{{ markerCircleRadius }}">
+                </circle>
+                <path
+                    ng-repeat="line in lines"
+                    id="{{ line.id }}"
+                    ng-d="{{ line.d }}">
+                </path>
+            </g>
+        </defs>
     </svg>
 </div>
